stars message functionality

--- a/.env
+++ b/.env
@@ -13,4 +13,6 @@ NEXTAUTH_SECRET=0S5l05E0/2I8aiGSVRVHyF0kffC/dMG3t7Ex1g8GBWo=
 GITHUB_ID=f25f0e38d3e595dda895
 GITHUB_SECRET=fd61d7c99a3785bf07c49d8e4fe74b3d985b4d40
 
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dwr2im3wk
+
 
